# hdf5view

./: .buildinfo  .pre-commit-config.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/dev/: contribution_credits.rst.txt
_sources/user/: basic_usage.rst.txt  image_tab.rst.txt  make_demo_data.rst.txt
_static/: documentation_options.js
dev/: code_style.html  contribution_credits.html  index.html  installing_a_development_environment.html  using_git.html
docs/: conf.py  index.rst  requirements.txt
docs/dev/: index.rst  installing_a_development_environment.rst
docs/reference/: index.rst
docs/user/: basic_usage.rst  index.rst  installation.rst  plot_tab.rst  related_projects.rst  table_tab.rst
reference/: index.html
src/hdf5view/: __init__.py  main.py  mainwindow.py  models.py  views.py
src/hdf5view/resources/: make_demo_hdf5.py
user/: basic_usage.html  image_tab.html  index.html  installation.html  make_demo_data.html  plot_tab.html  related_projects.html  table_tab.html
